fixing clipping on the bottom

--- a/public/Assets/styles/App.css
+++ b/public/Assets/styles/App.css
@@ -448,6 +448,7 @@ label {
 	color: white;
 	width: 30rem;
 	margin-top: 2%;
+  margin-bottom: 2rem;
   }
 
   .dark-mode .Bio {
